# SailServer

./: .env.template  .gitignore  README.md  check.py  debug.py  main.py  pyproject.toml  server.py  server_debug.py  test.py
internal/: db.py
internal/controller/: content.py  finance.py  health.py  life.py  project.py
internal/data/: content.py  finance.py  health.py  info.py  life.py  necessity.py  news.py  project.py  world.py
internal/model/: content.py  finance.py  health.py  info.py  life.py  necessity.py  project.py  world.py
internal/model/content/: __init__.py  book.py  chapter.py  content.py  image.py  vault.py
internal/model/finance/: account.py  budget.py  transaction.py
internal/router/: content.py  db.py  health.py  life.py  project.py
scripts/basic/: calc_time.py  check_env.py
task/basic/: check_env.py
task/db/: _dispatcher.py  basic.py  content.py  content_image.py  dispatcher.py  life.py  money.py  read_data.py  read_weight.py  service_account.py  sync.py  vault.py  weight.py  world.py
tests/: conftest.py
utils/: book_parser.py  money.py  sampler.py  vaultnote.py
